tests/http/snapshots/http__legacy_logs__channel_by_login_needs_twitch.snap
---
source: tests/http/legacy_logs.rs
expression: "get(\"/channel/testchan/2026/3/1\").send().await"
---
GET /channel/testchan/2026/3/1
status: 503 Service Unavailable
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
Twitch token is not ready yet
