tests/http/snapshots/http__legacy_logs__channel_day_json_basic.snap
---
source: tests/http/legacy_logs.rs
expression: "get(\"/channelid/11111/2026/3/1?jsonBasic\").send().await"
---
GET /channelid/11111/2026/3/1?jsonBasic
status: 200 OK
content-type: application/json
cache-control: no-cache
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
{
  "messages": [
    {
      "displayName": "Alice",
      "id": "00000000-0000-0000-0000-000000000001",
      "tags": {
        "badge-info": "",
        "badges": "subscriber/12",
        "color": "#FF0000",
        "display-name": "Alice",
        "emotes": "",
        "flags": "",
        "id": "00000000-0000-0000-0000-000000000001",
        "room-id": "11111",
        "subscriber": "1",
        "tmi-sent-ts": "1772348400000",
        "user-id": "22222",
        "user-type": ""
      },
      "text": "hello world",
      "timestamp": "2026-03-01T07:00:00Z"
    },
    {
      "displayName": "Bob",
      "id": "00000000-0000-0000-0000-000000000002",
      "tags": {
        "badge-info": "",
        "badges": "",
        "display-name": "Bob",
        "emotes": "",
        "flags": "",
        "id": "00000000-0000-0000-0000-000000000002",
        "room-id": "11111",
        "tmi-sent-ts": "1772353800500",
        "user-id": "33333",
        "user-type": ""
      },
      "text": "hi alice",
      "timestamp": "2026-03-01T08:30:00.500Z"
    },
    {
      "displayName": "Alice",
      "id": "00000000-0000-0000-0000-000000000003",
      "tags": {
        "badge-info": "",
        "badges": "subscriber/12",
        "color": "#FF0000",
        "display-name": "Alice",
        "emotes": "",
        "flags": "",
        "id": "00000000-0000-0000-0000-000000000003",
        "room-id": "11111",
        "subscriber": "1",
        "tmi-sent-ts": "1772355600000",
        "user-id": "22222",
        "user-type": ""
      },
      "text": "hello again",
      "timestamp": "2026-03-01T09:00:00Z"
    }
  ]
}
