tests/http/snapshots/http__legacy_logs__channel_day_offset.snap
---
source: tests/http/legacy_logs.rs
expression: "get(\"/channelid/11111/2026/3/1?limit=1&offset=1&json\").send().await"
---
GET /channelid/11111/2026/3/1?limit=1&offset=1&json
status: 200 OK
content-type: application/json
cache-control: no-cache
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
{
  "messages": [
    {
      "channel": "testchan",
      "displayName": "Bob",
      "id": "00000000-0000-0000-0000-000000000002",
      "raw": "@badge-info=;badges=;display-name=Bob;emotes=;flags=;id=00000000-0000-0000-0000-000000000002;room-id=11111;tmi-sent-ts=1772353800500;user-id=33333;user-type= :bob!bob@bob.tmi.twitch.tv PRIVMSG #testchan :hi alice",
      "tags": {
        "badge-info": "",
        "badges": "",
        "display-name": "Bob",
        "emotes": "",
        "flags": "",
        "id": "00000000-0000-0000-0000-000000000002",
        "room-id": "11111",
        "tmi-sent-ts": "1772353800500",
        "user-id": "33333",
        "user-type": ""
      },
      "text": "hi alice",
      "timestamp": "2026-03-01T08:30:00.500Z",
      "type": 1,
      "username": "bob"
    }
  ]
}
