tests/http/snapshots/http__legacy_logs__channel_day_raw.snap
---
source: tests/http/legacy_logs.rs
expression: "get(\"/channelid/11111/2026/3/1?raw\").send().await"
---
GET /channelid/11111/2026/3/1?raw
status: 200 OK
content-type: text/plain; charset=utf-8
cache-control: no-cache
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
@badge-info=;badges=subscriber/12;color=#FF0000;display-name=Alice;emotes=;flags=;id=00000000-0000-0000-0000-000000000001;room-id=11111;subscriber=1;tmi-sent-ts=1772348400000;user-id=22222;user-type= :alice!alice@alice.tmi.twitch.tv PRIVMSG #testchan :hello world
@badge-info=;badges=;display-name=Bob;emotes=;flags=;id=00000000-0000-0000-0000-000000000002;room-id=11111;tmi-sent-ts=1772353800500;user-id=33333;user-type= :bob!bob@bob.tmi.twitch.tv PRIVMSG #testchan :hi alice
@badge-info=;badges=subscriber/12;color=#FF0000;display-name=Alice;emotes=;flags=;id=00000000-0000-0000-0000-000000000003;room-id=11111;subscriber=1;tmi-sent-ts=1772355600000;user-id=22222;user-type= :alice!alice@alice.tmi.twitch.tv PRIVMSG #testchan :hello again
