tests/http/snapshots/http__legacy_logs__channel_invalid_month.snap
---
source: tests/http/legacy_logs.rs
expression: "get(\"/channelid/11111/2026/13/1\").send().await"
---
GET /channelid/11111/2026/13/1
status: 400 Bad Request
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
Invalid param: Invalid month: 13 (expected 1-12)
