tests/http/snapshots/http__legacy_logs__channel_redirects_to_latest_day.snap
---
source: tests/http/legacy_logs.rs
expression: "get(\"/channelid/11111\").send().await"
---
GET /channelid/11111
status: 303 See Other
location: /channelid/11111/2026/3/15
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
