tests/http/snapshots/http__legacy_logs__channel_unknown.snap
---
source: tests/http/legacy_logs.rs
expression: "get(\"/channelid/99999/2026/3/1\").send().await"
---
GET /channelid/99999/2026/3/1
status: 404 Not Found
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
Not found
