tests/http/snapshots/http__legacy_logs__list_all_channels.snap
---
source: tests/http/legacy_logs.rs
expression: "get(\"/list\").send().await"
---
GET /list
status: 400 Bad Request
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
Invalid param: Specify query parameter: channel or channelid
